Execution: outbox + RabbitMQ + retry + reconciliation